<resources>
    <string name="app_name">GymJorb</string>

    <string name="drawer_sign_out">Sign out</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_report_bug">Report a bug</string>

    <string name="routines_last_performed">Last Performed: %d days ago</string>
    <string name="routines_number_sets">&#160;x %s sets</string>
    <string name="routines_never">Never</string>
    <string name="routines_start_routine">Start routine</string>
    <string name="routines_start_free_workout">Start a free workout</string>
    <string name="routines_monday">Mon</string>
    <string name="routines_tuesday">Tue</string>
    <string name="routines_wednesday">Wed</string>
    <string name="routines_thursday">Thur</string>
    <string name="routines_friday">Fri</string>
    <string name="routines_saturday">Sat</string>
    <string name="routines_sunday">Sun</string>

    <string name="new_routine_title">New Routine</string>
    <string name="new_routine_name">Name</string>
    <string name="new_routine_days">Days</string>
    <string name="new_routine_exercises">Exercises</string>
    <string name="new_routine_add_exercises">Add Exercises</string>
    <string name="new_routine_sets">Sets</string>
    <string name="new_routine_reps">Reps</string>
    <string name="new_routine_timer">Timer</string>
    <string name="new_routine_monday">Mo</string>
    <string name="new_routine_tuesday">Tu</string>
    <string name="new_routine_wednesday">We</string>
    <string name="new_routine_thursday">Th</string>
    <string name="new_routine_friday">Fr</string>
    <string name="new_routine_saturday">Sa</string>
    <string name="new_routine_sunday">Su</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
