<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/newExerciseCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        card_view:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/exerciseName"
                android:textColor="?android:attr/textColorPrimary"
                tools:text="Barbell Bench Press"
                android:textSize="24sp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/numSets"
                tools:text="5"
                android:textColor="?android:attr/textColorPrimary"
                app:layout_constraintTop_toBottomOf="@+id/exerciseName"
                app:layout_constraintEnd_toStartOf="@+id/numReps"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textSize="18sp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/numReps"
                android:textColor="?android:attr/textColorPrimary"
                app:layout_constraintEnd_toEndOf="@+id/exerciseName"
                app:layout_constraintStart_toStartOf="@+id/exerciseName"
                app:layout_constraintTop_toBottomOf="@+id/exerciseName"
                tools:text="5"
                android:layout_marginTop="8dp"
                android:textSize="18sp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/numTimer"
                android:textColor="?android:attr/textColorPrimary"
                tools:text="60"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toEndOf="@+id/numReps"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/exerciseName"
                android:textSize="18sp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/titleSets"
                app:layout_constraintTop_toBottomOf="@+id/numSets"
                app:layout_constraintEnd_toEndOf="@+id/numSets"
                app:layout_constraintStart_toStartOf="@+id/numSets"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"
                android:text="@string/new_routine_sets"/>

        <TextView
                android:text="@string/new_routine_reps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/titleReps"
                app:layout_constraintEnd_toEndOf="@+id/numReps"
                app:layout_constraintStart_toStartOf="@+id/numReps"
                app:layout_constraintTop_toBottomOf="@+id/numReps"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
                android:text="@string/new_routine_timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/titleTimer"
                app:layout_constraintEnd_toEndOf="@+id/numTimer"
                app:layout_constraintStart_toStartOf="@+id/numTimer"
                app:layout_constraintTop_toBottomOf="@+id/numTimer"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>